# proto

./: .gitignore  README.md  client.py  pre.md  pyproject.toml  run_video_ui.bat  start_app.bat  video-editing-ui-README.md
backend/: README.md  mediaServer.js  mediaStorage.js  media_utils.py  package-lock.json  package.json  requirements.txt  run_server.bat  server.js  server.py  test-page.html  upload_test.html
backend/uploads/audio/: 1748584900517-show.m4a
frontend/: README.md  package-lock.json  package.json  serve.py
frontend/public/: index.html
frontend/src/: App.css  App.js  fix-video-list.js
frontend/src/components/: ChatBox.js  VideoList.css  VideoList.js  VideoPreview.js  VideoUploader.js
frontend/src/utils/: apiClient.js  indexedDBStorage.js  mediaStorage.js  simpleStorage.js
