[project]
name = "mcp-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "a2wsgi>=1.10.8",
    "flask>=3.1.1",
    "flask-cors>=5.0.1",
    "google-generativeai>=0.8.5",
    "mcp>=1.6.0",
    "python-dotenv>=1.1.0",
    "uvicorn>=0.34.2",
]
